@@ -7,8 +7,9 @@ HEAD
     + Added listVMs method to the virtualizers
     + Added identifier and conf command line arguments
     + Make bridge definition mandatory when using manual-bridging
-    + Now the gateway and the first address from the config are passed
-      to the tests and the suites as COMM_gateway and COMM_firstAddress
+    + Now the interface, the gateway and the first address from the config
+      are passed to the tests and the suites as COMM_iface, COMM_gateway
+      and COMM_firstAddress
     + Added master configuration key to set the IP of the master
     + Added finalConfigurations method to ANSTE::Image::Commands
     + Added ANSTE::Virtualizer::OpenStack with partial support
